--- a/SampleCode/IAP_HID_20/KEIL/Nu_Link_Driver.ini
+++ b/SampleCode/IAP_HID_20/KEIL/Nu_Link_Driver.ini
@@ -1,9 +1,9 @@
 [Version]
-Nu_LinkVersion=V5.20
+Nu_LinkVersion=V6.01
 [Process]
-ProcessID=0x000039bc
-ProcessCreationTime_L=0xcca73ed3
-ProcessCreationTime_H=0x01d805d3
+ProcessID=0x00003fe4
+ProcessCreationTime_L=0x57c86b17
+ProcessCreationTime_H=0x01d9e15b
 NuLinkID=0x18000ee6
 NuLinkID0=0x18000ee6
 NuLinkIDs_Count=0x00000001
@@ -203,6 +203,12 @@ ProgramAlgorithm=
 EnableLog=0
 Connect=0
 MemAccessWhileRun=0
+TraceConf0=0x00000002
+TraceConf1=0x00b71b00
+TraceConf2=0x00000800
+TraceConf3=0x00000000
+TraceConf4=0x00000001
+TraceConf5=0x00000000
 [NM1500]
 Reset=Autodetect
 MaxClock=1MHz
@@ -1056,33 +1062,6 @@ MemAccessWhileRun=0
 RAMForAlgorithmStart=0x20000000
 RAMForAlgorithmSize=0x1000
 ProgramAlgorithm=I91500_AP_64.FLM
-[KM1M7]
-Connect=0
-Reset=Autodetect
-MaxClock=4MHz
-MemoryVerify=0
-IOVoltage=5000
-Erase=1
-Program=1
-Verify=1
-ResetAndRun=1
-EnableLog=0
-MemAccessWhileRun=0
-RAMForAlgorithmStart=0x20000000
-RAMForAlgorithmSize=0x00004000
-ProgramAlgorithm=KM1M7AFxxx_I.FLM
-ProgramAlgorithm1=KM1M7AFxxx_D.FLM
-TraceConf0=0x00000002
-TraceConf1=0x00b71b00
-TraceConf2=0x00000800
-TraceConf3=0x00000000
-TraceConf4=0x00000001
-TraceConf5=0x00000000
-EnableKeyfile=0
-Keycode0=0xFFFFFFFF
-Keycode1=0xFFFFFFFF
-Keycode2=0xFFFFFFFF
-Keycode3=0xFFFFFFFF
 [N32F030]
 Connect=0
 Reset=Autodetect
@@ -1144,3 +1123,144 @@ TraceConf2=0x00000800
 TraceConf3=0x00000000
 TraceConf4=0x00000001
 TraceConf5=0x00000000
+[KM1M4B]
+Connect=0
+Reset=Autodetect
+MaxClock=4MHz
+MemoryVerify=0
+IOVoltage=5000
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x00004000
+ProgramAlgorithm=KM1M4B_I.FLM
+ProgramAlgorithm1=KM1M4B_D.FLM
+TraceConf0=0x00000002
+TraceConf1=0x00b71b00
+TraceConf2=0x00000800
+TraceConf3=0x00000000
+TraceConf4=0x00000001
+TraceConf5=0x00000000
+EnableKeyfile=0
+Keycode0=0xFFFFFFFF
+Keycode1=0xFFFFFFFF
+Keycode2=0xFFFFFFFF
+Keycode3=0xFFFFFFFF
+[KM1M7A/B]
+Connect=0
+Reset=Autodetect
+MaxClock=4MHz
+MemoryVerify=0
+IOVoltage=5000
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x00004000
+ProgramAlgorithm=KM1M7AFxxx_I.FLM
+ProgramAlgorithm1=KM1M7AFxxx_D.FLM
+TraceConf0=0x00000002
+TraceConf1=0x00b71b00
+TraceConf2=0x00000800
+TraceConf3=0x00000000
+TraceConf4=0x00000001
+TraceConf5=0x00000000
+EnableKeyfile=0
+Keycode0=0xFFFFFFFF
+Keycode1=0xFFFFFFFF
+Keycode2=0xFFFFFFFF
+Keycode3=0xFFFFFFFF
+[KM1M7C]
+Connect=0
+Reset=Autodetect
+MaxClock=4MHz
+MemoryVerify=0
+IOVoltage=3300
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x00004000
+ProgramAlgorithm=KM1M7C_I.FLM
+ProgramAlgorithm1=KM1M7C_D0.FLM
+ProgramAlgorithm2=KM1M7C_D1.FLM
+TraceConf0=0x00000002
+TraceConf1=0x00b71b00
+TraceConf2=0x00000800
+TraceConf3=0x00000000
+TraceConf4=0x00000001
+TraceConf5=0x00000000
+EnableKeyfile=0
+Keycode0=0xFFFFFFFF
+Keycode1=0xFFFFFFFF
+Keycode2=0xFFFFFFFF
+Keycode3=0xFFFFFFFF
+[M091]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=1
+EnableFlashBreakpoint=0
+EnableLog=0
+MemAccessWhileRun=0
+DisableTimeoutDetect=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x2000
+ProgramAlgorithm=M091_AP_64.FLM
+[M2L31]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Bank=0
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=1
+EnableFlashBreakpoint=0
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x8000
+ProgramAlgorithm=M2L31_AP_512.FLM
+TraceConf0=0x00000002
+TraceConf1=0x00b71b00
+TraceConf2=0x00000800
+TraceConf3=0x00000000
+TraceConf4=0x00000001
+TraceConf5=0x00000000
+[NUC1263]
+Connect=0
+Reset=Autodetect
+MaxClock=1MHz
+MemoryVerify=0
+IOVoltage=3300
+FlashSelect=APROM
+Erase=1
+Program=1
+Verify=1
+ResetAndRun=0
+EnableFlashBreakpoint=1
+EnableLog=0
+MemAccessWhileRun=0
+RAMForAlgorithmStart=0x20000000
+RAMForAlgorithmSize=0x2000
+ProgramAlgorithm=NUC1263_AP_64.FLM
